--- a/public/stylesheets/main.css
+++ b/public/stylesheets/main.css
@@ -1,5 +1,3 @@
-body { background-color: #fff; color: #333; }
-
 body, p, ol, ul, td {
   font-family: verdana, arial, helvetica, sans-serif;
   font-size:   13px;
@@ -52,3 +50,33 @@ a:hover { color: #fff; background-color:#000; }
   list-style: square;
 }
 
+/*************************************/
+/*** G E N E R A L   S T Y L I N G ***/
+/*************************************/
+
+html, body {
+  height: 100%;
+}
+
+body {
+  background: url("/images/background_tartan.png");
+}
+
+div#wrapper {
+  background-color: white;
+  width: 800px;
+  min-height: 100%;
+  height: auto !important;
+  height: 100%;
+  margin: 0 auto -6em;
+}
+
+div#footer {
+  background-color: #2b2b2b;
+  width: 800px;
+  margin: 0 auto;
+}
+
+div#footer, div#pusher {
+  height: 6em;
+}
