Styling surrounding the posts.

--- a/app/views/layouts/main.haml
+++ b/app/views/layouts/main.haml
@@ -11,7 +11,7 @@
   #wrapper
     #header
       = link_to image_tag("banner.png"), "/"
-    #body
+    #content
       %p{ :style => "color: green" }= flash[:notice]
       = yield
     #pusher
