--- a/app/views/posts/index.haml
+++ b/app/views/posts/index.haml
@@ -1,23 +1,5 @@
-/ <h1>Listing posts</h1>
-/ 
-/ <table>
-/   <tr>
-/     <th>Title</th>
-/     <th>Body</th>
-/   </tr>
-/ 
-/ <% @posts.each do |post| %>
-/   <tr>
-/     <td><%=h post.title %></td>
-/     <td><%=h post.body %></td>
-/     <td><%= link_to 'Show', post %></td>
-/     <td><%= link_to 'Edit', edit_post_path(post) %></td>
-/     <td><%= link_to 'Destroy', post, :confirm => 'Are you sure?', :method => :delete %></td>
-/   </tr>
-/ <% end %>
-/ </table>
-/ 
-/ <br />
-/ 
-/ <%= link_to 'New post', new_post_path %>
-
+- @posts.each do |post|
+  .post
+    .post_date= post.created_at.strftime(date_format_string)
+    %h3= post.title
+    .post_body= post.body
