--- a/public/stylesheets/main.css
+++ b/public/stylesheets/main.css
@@ -71,6 +71,11 @@ div#wrapper {
   margin: 0 auto -6em;
 }
 
+div#content {
+  color: #2b2b2b;
+  padding: .75em;
+}
+
 div#footer {
   background-color: #2b2b2b;
   width: 800px;
@@ -79,4 +84,25 @@ div#footer {
 
 div#footer, div#pusher {
   height: 6em;
+}
+
+/*******************************/
+/*** P O S T   S T Y L I N G ***/
+/*******************************/
+
+div.post > div.post_date {
+  font: small-caps 125% palatino, georgia, serif;
+  letter-spacing: .1em;
+  text-align: center;
+  border-bottom: 1px solid #ddd;
+}
+
+div.post > h3 {
+  font: 150% palatino, georgia, serif;
+  margin: 1.25em 0 .75em;
+}
+
+div.post > div.post_body {
+  font-family: "Trebuchet MS", Verdana, Helvetica, sans-serif;
+  margin-bottom: 2em;
 }
