Used a helper root_path method.

--- a/app/views/layouts/main.haml
+++ b/app/views/layouts/main.haml
@@ -10,7 +10,7 @@
   %body
   #wrapper
     #header
-      = link_to image_tag("banner.png"), "/"
+      = link_to image_tag("banner.png"), root_path
     #content
       %p{ :style => "color: green" }= flash[:notice]
       = yield
