--- a/app/views/layouts/main.haml
+++ b/app/views/layouts/main.haml
@@ -12,7 +12,8 @@
     #header
       = link_to image_tag("banner.png"), root_path
     #content
-      %p{ :style => "color: green" }= flash[:notice]
+      - unless flash.empty?
+        %p#flash= flash[:notice]
       = yield
     #pusher
   #footer
