--- a/app/views/layouts/main.haml
+++ b/app/views/layouts/main.haml
@@ -14,6 +14,8 @@
     #content
       - unless flash.empty?
         %p#flash= flash[:notice]
+      
+      #new_post.clear_after= button_to "New post", new_post_path if admin?
       = yield
     #pusher
   #footer
