--- a/app/views/posts/index.haml
+++ b/app/views/posts/index.haml
@@ -1,11 +1,7 @@
-#new_post.clear_after= button_to "New post", new_post_path if admin?
-
 - @posts.each do |post|
   .post
     .post_date= post.created_at.strftime(date_format_string)
-    %h3= post.title
+    %h3= link_to post.title, post_path(post)
     .post_body= post.body
-    - if admin?
-      = link_to "Edit post", edit_post_path(post)
-      |
-      = link_to "Remove post", post_path(post), :confirm => "Are you sure?", :method => :delete
+    
+    - _edit_post(:post => post)
