Added CSS indicator for external links.

--- a/app/views/layouts/main.haml
+++ b/app/views/layouts/main.haml
@@ -18,4 +18,5 @@
       #new_post.clear_after= button_to "New post", new_post_path if admin?
       = yield
     #pusher
-  #footer
+  #footer 
+    %p A nice little website to talk about the world, designed by evansenter at gmail dot com.
