Converted some layouts.

--- a/app/views/layouts/main.haml
+++ b/app/views/layouts/main.haml
@@ -19,4 +19,4 @@
       = yield
     #pusher
   #footer 
-    %p A nice little website to talk about the world, designed by evansenter at gmail dot com.
+    %p= "A nice little website to talk about the world, designed by evansenter at gmail dot com." + logged_in_notice
