--- a/app/views/posts/new.haml
+++ b/app/views/posts/new.haml
@@ -1,19 +1,9 @@
-/ <h1>New post</h1>
-/ 
-/ <% form_for(@post) do |f| %>
-/   <%= f.error_messages %>
-/ 
-/   <p>
-/     <%= f.label :title %><br />
-/     <%= f.text_field :title %>
-/   </p>
-/   <p>
-/     <%= f.label :body %><br />
-/     <%= f.text_area :body %>
-/   </p>
-/   <p>
-/     <%= f.submit 'Create' %>
-/   </p>
-/ <% end %>
-/ 
-/ <%= link_to 'Back', posts_path %>
+- form_for @post do |form|
+  %p
+    = form.label :title
+    = form.text_field :title
+  %p
+    = form.label :body
+    = form.text_area :body
+  %p= form.submit "Create"
+      
