--- a/public/stylesheets/main.css
+++ b/public/stylesheets/main.css
@@ -81,6 +81,10 @@ div#content {
   padding: .75em;
 }
 
+div#content p {
+  margin-bottom: .75em;
+}
+
 p#flash {
   width: 80%;
   margin: 0 auto 1em;
@@ -92,7 +96,7 @@ p#flash {
 
 div#footer {
   background-color: #2b2b2b;
-  color: #888;
+  color: #666;
   width: 800px;
   margin: 0 auto;
 }
@@ -110,10 +114,6 @@ div#footer a {
 
 div#footer, div#pusher {
   height: 75px;
-}
-
-p {
-  margin-bottom: .75em;
 }
 
 /*******************************/
