--- a/app/views/posts/show.haml
+++ b/app/views/posts/show.haml
@@ -2,5 +2,4 @@
   .post_date= @post.created_at.strftime(date_format_string)
   %h3= @post.title
   .post_body= @post.body
-  
-  - _edit_post(:post => @post)
+  - _edit_post_buttons(:post => @post)
