--- a/app/views/layouts/main.haml
+++ b/app/views/layouts/main.haml
@@ -8,6 +8,7 @@
     = javascript_auto_include_tags
     = behaveJS_bootstrap
   %body
+    /= "Running in the #{RAILS_ENV} environment."
     #wrapper
       #header
         = link_to image_tag("banner.png"), root_path
