--- a/app/views/layouts/main.haml
+++ b/app/views/layouts/main.haml
@@ -8,7 +8,8 @@
     = javascript_auto_include_tags
     = behaveJS_bootstrap
   %body
-    /= "Running in the #{RAILS_ENV} environment."
+    /
+      = "Running in the #{RAILS_ENV} environment."
     #wrapper
       #header
         = link_to image_tag("banner.png"), root_path
