Removed JS / CSS caching.

--- a/app/views/layouts/main.haml
+++ b/app/views/layouts/main.haml
@@ -3,8 +3,8 @@
   %head
     %meta{ "http-equiv" => "content-type", :content => "text/html;charset=UTF-8" }/
     %title= "S Y M B O L t o P R O C"
-    = stylesheet_link_tag :defaults, :cache => true
-    = javascript_include_tag :defaults, :cache => true
+    = stylesheet_link_tag :defaults
+    = javascript_include_tag :defaults
     = javascript_auto_include_tags
     = behaveJS_bootstrap
   %body{ :onload => "prettyPrint()" }
