--- a/app/views/posts/show.haml
+++ b/app/views/posts/show.haml
@@ -1,5 +1,1 @@
-.post
-  .post_date= @post.created_at.strftime(date_format_string)
-  %h3= @post.title
-  .post_body~ @post.body
-  - _edit_post_buttons(:post => @post)
+- _post_body(:post => @post)
