--- a/app/views/layouts/main.haml
+++ b/app/views/layouts/main.haml
@@ -3,13 +3,11 @@
   %head
     %meta{ "http-equiv" => "content-type", :content => "text/html;charset=UTF-8" }/
     %title= "S Y M B O L t o P R O C"
-    = stylesheet_link_tag :defaults, :cache => true
+    = stylesheet_link_tag :defaults,    :cache => true
     = javascript_include_tag :defaults, :cache => true
     = javascript_auto_include_tags
     = behaveJS_bootstrap
   %body{ :onload => "prettyPrint()" }
-    /
-      = "Running in the #{RAILS_ENV} environment."
     #wrapper
       #header
         = link_to image_tag("banner.png"), root_path
@@ -19,5 +17,5 @@
         = yield
       #pusher
     #footer 
-      %p= "Built by evansenter [at] gmail [dot] com - I don't know what to put here." + logged_in_notice
+      %p= "Built by evansenter [at] gmail [dot] com." + logged_in_notice
     = analytics_code
