--- a/app/views/layouts/main.haml
+++ b/app/views/layouts/main.haml
@@ -17,5 +17,5 @@
         = yield
       #pusher
     #footer 
-      %p= "Built by evansenter [at] gmail [dot] com." + logged_in_notice
+      %p= "Built by evansenter [at] gmail [dot] com."
     = analytics_code
