--- a/app/views/layouts/main.haml
+++ b/app/views/layouts/main.haml
@@ -17,5 +17,6 @@
         = yield
       #pusher
     #footer 
-      %p= "Built by evansenter [at] gmail [dot] com."
+      #footer_internals
+        %p [ evansenter => gmail . com ]
     = analytics_code
