--- a/public/stylesheets/main.css
+++ b/public/stylesheets/main.css
@@ -19,7 +19,7 @@ body, p, ol, ul, td {
 }
 
 pre {
-  background-color: #eee;
+  background-color: #ddd;
   padding: 10px;
   font-size: 11px;
 }
@@ -33,20 +33,29 @@ div#wrapper {
   margin: 0 auto -75px;
 }
 
+div#header {
+  border-bottom: 1px solid #DDD;
+}
+
 div#footer {
-  background-color: #2b2b2b;
+  background-color: #fafafa;
   color: #666;
   width: 800px;
   margin: 0 auto;
+  font-family: arial;
 }
 
-div#footer > p {
-  line-height: 75px;
+div#footer > div#footer_internals {
+  border-top: 1px solid #ddd;
+}
+
+div#footer > div#footer_internals > p {
+  line-height: 74px;
   margin-right: .75em;
   text-align: center;
 }
 
-div#footer a {
+div#footer > div#footer_internals a {
   color: #bbb;
   text-decoration: none;
 }
@@ -140,8 +149,9 @@ div#edit_post_buttons > form {
   float: left;
 }
 
-.left_button {
-  margin-right: .5em;
+div.pagination {
+  text-align: right;
+  font-family: arial;
 }
 
 /* Styling for individual post display. */
@@ -156,11 +166,12 @@ div.post_date {
   letter-spacing: .25em;
   text-align: center;
   margin-top: 1.5em;
-  border-bottom: 1px solid #ddd;
+  border-bottom: 1px solid #eee;
 }
 
 div.post > h3 {
   font: 150% palatino, georgia, serif;
+  letter-spacing: .2em;
   margin: 1.25em 0 .75em;
 }
 
@@ -171,6 +182,11 @@ div.post > h3 > a {
 
 div.post > h3 > a:hover {
   text-decoration: underline;
+}
+
+div.post div.post_body {
+  font-family: arial;
+  letter-spacing: .1em;
 }
 
 div.post div.post_body a {
@@ -189,6 +205,33 @@ div.post pre.prettyprint {
   border: 1px solid #ddd;
   padding: .5em 1em;
   font-size: 90%;
+}
+
+div.post div.comments, div.post div#add_comment h3 {
+  font-family: arial;
+  font-weight: normal;
+  letter-spacing: .5em;
+  text-align: center;
+  margin-top: .5em;
+}
+
+div.post div.comments a {
+  color: #ddd;
+  text-decoration: none;
+}
+
+div.post div.comments a:hover {
+  color: #aaa;
+}
+
+div.post div#add_comment h3 a {
+  color: #aaa;
+  text-decoration: none;
+}
+
+div.post div#add_comment h3 a:hover {
+  color: #777;
+  text-decoration: none;
 }
 
 /* Styling for post forms. */
@@ -216,5 +259,18 @@ div#post_form form div input[type="text"], div#post_form form div textarea {
 }
 
 div#post_form form div input[type="submit"] {
+  float: right;
+}
+
+/* Styling for comment forms. */
+
+div#add_comment form textarea {
+  width: 100%;
+  height: 8em;
+  font-size: 1.1em;
+  margin-bottom: .5em;
+}
+
+div#add_comment form input#comment_submit {
   float: right;
 }
