--- a/app/views/posts/_edit_post_buttons.haml
+++ b/app/views/posts/_edit_post_buttons.haml
@@ -1,4 +1,4 @@
-- if authorized?
+- if admin?
   #edit_post_buttons.clear_after
-    = button_to "Edit post", edit_post_path(post), :class => "left_button", :method => :get
-    = button_to "Remove post", post_path(post), :confirm => "Are you sure?", :method => :delete
+    = button_to "edit post", edit_post_path(post), :method => :get
+    = button_to "remove post", post_path(post), :method => :delete, :confirm => "Are you sure?"
