--- a/app/views/layouts/main.haml
+++ b/app/views/layouts/main.haml
@@ -2,10 +2,12 @@
 %html
   %head
     %meta{ "http-equiv" => "content-type", :content => "text/html;charset=UTF-8" }/
-    %title= "S Y M B O L t o P R O C"
+    %title S Y M B O L t o P R O C
     = stylesheet_link_tag :defaults,    :cache => true
     = javascript_include_tag :defaults, :cache => true
     = javascript_auto_include_tags
+    %script{ :type => "text/javascript", :src => "http://use.typekit.com/lir8lfc.js" }
+    %script{ :type => "text/javascript" } try{Typekit.load();}catch(e){}
     = behaveJS_bootstrap
   %body{ :onload => "prettyPrint()" }
     #wrapper
