Weakening font strength

--- a/public/stylesheets/main.css
+++ b/public/stylesheets/main.css
@@ -168,6 +168,7 @@ div.post_date {
 
 div.post > h3 {
   font-size: 150%;
+  font-weight: normal;
   letter-spacing: .1em;
   margin: 1.25em 0 .75em;
 }
