Comments are safer

--- a/public/stylesheets/main.css
+++ b/public/stylesheets/main.css
@@ -259,12 +259,28 @@ div#post_form form div input[type="submit"] {
 }
 
 /* Styling for comment forms. */
+div#add_comment form input[type=text], div#add_comment form textarea {
+  font-size: 1.1em;
+  padding: .25em;
+  margin-bottom: .5em;
+  border: 1px solid #999;
+}
+
+div#add_comment form label {
+  color: #aaa;
+}
+
+div#add_comment form input[type=text] {
+  margin-left: 0;
+}
 
 div#add_comment form textarea {
   width: 100%;
   height: 8em;
-  font-size: 1.1em;
-  margin-bottom: .5em;
+}
+
+div#add_comment form div#human_check {
+  float: left;
 }
 
 div#add_comment form input#comment_submit {
