--- a/app/views/posts/_add_comment.haml
+++ b/app/views/posts/_add_comment.haml
@@ -2,6 +2,14 @@
   %h3 add comment
   - form_for :comment, :url => post_comments_path(post), :html => { :class => "clear_after" } do |form|
     %div
-      = form.text_area :body
+      = form.text_field :name
+      = form.label :name, "name please!"
+      
+      = form.text_area  :body
+      
+      #human_check
+        = form.check_box :human
+        = form.label :human, "check if you're not a robot!"
+      
       = observe_field :comment_body, :function => "updateCommentability(value);", :frequency => 0.25
     %div= form.submit "add comment", :class => "clear_after", :disabled => true
